<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vision_bot</name>
  <version>0.0.0</version>
  <description>Vision_navigation</description>
  <maintainer email="bineeshajabi98@gmail.com">arz-1024</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>hospital_display</exec_depend>
  <exec_depend>agv_description</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
